--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -62,7 +62,7 @@ input {
         natural_scroll = yes
         clickfinger_behavior = true
     }
-    resolve_binds_by_sym = true
+    resolve_binds_by_sym = false
     sensitivity = 0 # -1.0 to 1.0, 0 means no modification.
 }
 
@@ -93,6 +93,9 @@ group {
 xwayland {
     force_zero_scaling = true
 }
+# debug {
+#     disable_logs = false
+# }
 decoration {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
@@ -164,16 +167,6 @@ plugin {
         gesture_distance = 300 # how far is the "max"
         gesture_positive = false # positive = swipe down. Negative = swipe up.
     }
-    hyprbars {
-        # example config
-        bar_height = 20
-
-        # example buttons (R -> L)
-        # hyprbars-button = color, size, on-click
-        hyprbars-button = rgb(ff4040), 10, 󰖭, hyprctl dispatch killactive
-        hyprbars-button = rgb(eeee11), 10, , hyprctl dispatch fullscreen 1
-    }
-
 }
 # Example windowrule v1
 # windowrule = float, ^(kitty)$
@@ -182,6 +175,7 @@ plugin {
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
 windowrulev2 = idleinhibit fullscreen, class:^(.*)$
+windowrulev2 = float,class:^(mscore)|(MuseScore*)$,title:^(mscore)|(MuseScore*)$
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = SUPER
 
@@ -200,7 +194,8 @@ bind = $mainMod, Print, exec, grimblast copysave screen
 bind = $mainMod, G, togglegroup
 bind = $mainMod, N, changegroupactive, f 
 bind = $mainMod, B, changegroupactive, b 
-bind = $mainMod, \, hyprexpo:expo, toggle
+bind = $mainMod, grave, hyprexpo:expo, toggle
+bind = $mainMod SHIFT, O, exec, /home/rgarber11/.config/hypr/hyprland/dpms.sh
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
 bind = $mainMod, right, movefocus, r
