Update Hyprlock to be self-contained with image

--- a/hypr/hyprlock.conf
+++ b/hypr/hyprlock.conf
@@ -10,7 +10,7 @@ general {
 }
 background {
     monitor = 
-    path = /home/rgarber11/Pictures/mountains.png
+    path = /home/rgarber11/.config/hypr/hyprlock/mountains.png
     blur_passes = 0
 }
 input-field {
@@ -83,7 +83,7 @@ label { # "locked" text
 
 label { # Status
     monitor =
-    text = cmd[update:5000] ~/.config/hypr/hyprlock/status.sh
+    text = cmd[update:5000] /home/rgarber11/.config/hypr/hyprlock/status.sh
     shadow_passes = 1
     shadow_boost = 0.5
     color = $text_color
