Changed Source comments

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -1,5 +1,7 @@
 #Hyprnvidia
 source = /home/rgarber11/.config/hypr/nvidia.conf
+
+# nwg-displays
 source = ~/.config/hypr/monitors.conf
 source = ~/.config/hypr/workspaces.conf
 
