Shamelessly copied in @JustinMDickey's Hyprbar config, for if I want TitleBars, and want them to look good.

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -136,6 +136,20 @@ plugin {
         gesture_distance = 300 # how far is the "max"
         gesture_positive = false # positive = swipe down. Negative = swipe up.
     }
+    # Shameless copy of @JustinMDickey's Hyprbar config
+    hyprbars {
+        bar_height = 38
+        bar_color = rgb(1e1e1e)
+        col.text = $foreground
+        bar_text_size = 12
+        bar_text_font = Jetbrains Mono Nerd Font Mono Bold
+        bar_button_padding = 12
+        bar_padding = 10
+        bar_precedence_over_border = true
+        hyprbars-button = $color1, 20, , hyprctl dispatch killactive
+        hyprbars-button = $color3, 20, , hyprctl dispatch fullscreen 2
+        hyprbars-button = $color4, 20, , hyprctl dispatch togglefloating
+   }
 }
 windowrulev2 = suppressevent maximize, class:.* 
 windowrulev2 = idleinhibit fullscreen, class:^(.*)$
