Changed slightly to work with my existing color scheme

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -139,16 +139,17 @@ plugin {
     # Shameless copy of @JustinMDickey's Hyprbar config
     hyprbars {
         bar_height = 38
-        bar_color = rgb(1e1e1e)
-        col.text = $foreground
+        bar_color = rgb(002b36)
+        col.text = rgb(93a1a1)
         bar_text_size = 12
-        bar_text_font = Jetbrains Mono Nerd Font Mono Bold
+        bar_text_font = JetBrainsMono Nerd Font Mono Bold
         bar_button_padding = 12
+        bar_buttons_alignment = right
         bar_padding = 10
         bar_precedence_over_border = true
-        hyprbars-button = $color1, 20, , hyprctl dispatch killactive
-        hyprbars-button = $color3, 20, , hyprctl dispatch fullscreen 2
-        hyprbars-button = $color4, 20, , hyprctl dispatch togglefloating
+        hyprbars-button = rgb(dc322f), 20, , hyprctl dispatch killactive
+        hyprbars-button = rgb(b58900), 20, , hyprctl dispatch fullscreen 2
+        hyprbars-button = rgb(268bd2), 20, , hyprctl dispatch togglefloating
    }
 }
 windowrulev2 = suppressevent maximize, class:.* 
