Changed hyprbars, added copying from images

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -38,7 +38,7 @@ input {
     kb_model =
     kb_options = compose:menu,caps:swapescape
     kb_rules =
-
+ 
     follow_mouse = 1
     numlock_by_default = true
     touchpad {
@@ -148,13 +148,13 @@ plugin {
         bar_padding = 10
         bar_precedence_over_border = true
         hyprbars-button = rgb(dc322f), 20, , hyprctl dispatch killactive
-        hyprbars-button = rgb(b58900), 20, , hyprctl dispatch fullscreen 2
-        hyprbars-button = rgb(268bd2), 20, , hyprctl dispatch togglefloating
    }
 }
 windowrulev2 = suppressevent maximize, class:.* 
 windowrulev2 = idleinhibit fullscreen, class:^(.*)$
 windowrulev2 = float,class:^(mscore)|(MuseScore*)$,title:^(mscore)|(MuseScore*)$
+windowrulev2 = opaque,class:^(steam_proton)$,title:^(HP 10bII)(.*)$
+windowrulev2 = tile,title:^(Foliate)$
 
 $mainMod = SUPER
 
@@ -212,7 +212,9 @@ bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
 bind = $mainMod SHIFT CTRL,right, movetoworkspace, +1
 bind = $mainMod SHIFT CTRL,left, movetoworkspace, -1
-
+bind = $mainMod SHIFT, q, exec, hyprctl activewindow > ~/active.window
+bind = $mainMod CTRL, c, exec, grimblast save area - | tesseract - - | wl-copy
+bind = $mainMod CTRL, r, exec, grimblast save area - | tesseract -l rus - - | wl-copy
 # Example special workspace (scratchpad)
 bind = $mainMod, S, togglespecialworkspace, magic
 bind = $mainMod SHIFT, S, movetoworkspace, special:magic
@@ -233,3 +235,4 @@ bindl=, XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
 bindl=, XF86MonBrightnessUp, exec, brightnessctl set 10%+
 bindl=, XF86MonBrightnessDown, exec, brightnessctl set 10%-
 bindl=, XF86ScreenSaver, exec, loginctl lock-session
+bindl=, XF86AudioPlay, exec, playerctl play-pause
