Changed browsers, fixed up the fullscreen app launcher (even if rarely used)

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -16,7 +16,7 @@ env = XCURSOR_SIZE,24
 env = QT_QPA_PLATFORMTHEME,qt6ct
 env = GDK_THEME,Qogir-Dark
 
-exec-once = /usr/lib/pam_kwallet_init --no-startup-id & /usr/lib/polkit-kde-authentication-agent-1 & nm-applet
+exec-once = /usr/lib/pam_kwallet_init --no-startup-id & /usr/lib/polkit-kde-authentication-agent-1 & nm-applet & blueman-applet
 exec-once = hyprpm reload -n
 exec-once = hypridle
 exec-once = swaybg -i /home/rgarber11/.config/hypr/hyprland/bg.jpeg -m center
@@ -26,11 +26,12 @@ exec-once = nwg-dock-hyprland -d -p left -hd 0
 exec-once = wl-paste --type text --watch cliphist store #Stores only text data
 exec-once = wl-paste --type image --watch cliphist store #Stores only image data
 exec-once = caffeine
+exec-once = nwg-drawer -fm "dolphin" -wm "hyprland" -r
 
 $terminal = kitty
 $fileManager = dolphin
 $menu = anyrun
-$browser = chromium
+$browser = firefox
 
 input {
     kb_layout = us,ru
@@ -153,8 +154,10 @@ plugin {
 windowrulev2 = suppressevent maximize, class:.* 
 windowrulev2 = idleinhibit fullscreen, class:^(.*)$
 windowrulev2 = float,class:^(mscore)|(MuseScore*)$,title:^(mscore)|(MuseScore*)$
-windowrulev2 = opaque,class:^(steam_proton)$,title:^(HP 10bII)(.*)$
 windowrulev2 = tile,title:^(Foliate)$
+windowrulev2 = float, class=(hp10bii\+\.exe),title:(hp 10bii\+)
+windowrulev2 = opaque 0,class:^(hp10bii)*$,title:^(HP 10bII)(.*)$
+
 
 $mainMod = SUPER
 
@@ -173,6 +176,7 @@ bind = $mainMod, grave, hyprexpo:expo, toggle
 # Application Binds
 bind = $mainMod, E, exec, $fileManager
 bindr = ALT,SPACE, exec, $menu
+bindr = $mainMod, SUPER_L, exec, nwg-drawer -fm "dolphin" -wm "hyprland"
 bind = $mainMod, Q, exec, $terminal
 bind = $mainMod SHIFT, Print, exec, grimblast copysave area
 bind = $mainMod, Print, exec, grimblast copysave screen
