Added latest Hyprland Changes

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -16,12 +16,12 @@ env = XCURSOR_SIZE,24
 env = QT_QPA_PLATFORMTHEME,qt6ct
 env = GDK_THEME,Qogir-Dark
 
-exec-once = /usr/lib/pam_kwallet_init --no-startup-id & /usr/lib/polkit-kde-authentication-agent-1 & nm-applet & blueman-applet
+exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+exec-once = /usr/lib/pam_kwallet_init --no-startup-id & /usr/lib/polkit-kde-authentication-agent-1 & nm-applet & blueman-applet & nwg-panel
 exec-once = hyprpm reload -n
-exec-once = hypridle
-exec-once = swaybg -i /home/rgarber11/.config/hypr/hyprland/bg.jpeg -m center
+exec-once = hypridle > /home/rgarber11/hypridle.log
+exec-once = hyprpaper
 exec-once = swaync
-exec-once = nwg-panel
 exec-once = nwg-dock-hyprland -d -p left -hd 0
 exec-once = wl-paste --type text --watch cliphist store #Stores only text data
 exec-once = wl-paste --type image --watch cliphist store #Stores only image data
@@ -31,8 +31,11 @@ exec-once = nwg-drawer -fm "dolphin" -wm "hyprland" -r
 $terminal = kitty
 $fileManager = dolphin
 $menu = anyrun
-$browser = firefox
+$browser = zen-browser
 
+ecosystem {
+    no_update_news = true
+}
 input {
     kb_layout = us,ru
     kb_variant = ,phonetic
@@ -87,11 +90,12 @@ decoration {
         size = 3
         passes = 1
     }
-
-    drop_shadow = yes
-    shadow_range = 4
-    shadow_render_power = 3
-    col.shadow = rgba(1a1a1aee)
+    shadow {
+        enabled = true
+        range = 4
+        render_power = 3
+        color = rgba(1a1a1aee)
+    }
 }
 
 animations {
@@ -219,11 +223,15 @@ bind = $mainMod SHIFT CTRL,left, movetoworkspace, -1
 bind = $mainMod SHIFT, q, exec, hyprctl activewindow > ~/active.window
 bind = $mainMod CTRL, c, exec, grimblast save area - | tesseract - - | wl-copy
 bind = $mainMod CTRL, r, exec, grimblast save area - | tesseract -l rus - - | wl-copy
+bind = $mainMod CTRL, u, exec, grimblast save area - | tesseract -l ukr - - | wl-copy
 # Example special workspace (scratchpad)
 bind = $mainMod, S, togglespecialworkspace, magic
 bind = $mainMod SHIFT, S, movetoworkspace, special:magic
 bind = $mainMod, SPACE, exec, /home/rgarber11/.config/nwg-panel/executors/keyboard_layout.py -s
 
+# Send Signal to NWG Panel for Lock Indicators
+bind = , Caps_Lock, exec, /home/rgarber11/.config/hypr/hyprland/capslock_sender.sh
+bind = , Num_Lock, exec, /home/rgarber11/.config/hypr/hyprland/numlock_sender.sh
 # Scroll through existing workspaces with mainMod + scroll
 bind = $mainMod, mouse_down, workspace, +1
 bind = $mainMod, mouse_up, workspace, -1
@@ -239,4 +247,5 @@ bindl=, XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
 bindl=, XF86MonBrightnessUp, exec, brightnessctl set 10%+
 bindl=, XF86MonBrightnessDown, exec, brightnessctl set 10%-
 bindl=, XF86ScreenSaver, exec, loginctl lock-session
+
 bindl=, XF86AudioPlay, exec, playerctl play-pause
